WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177775
AX: [ATK] The value of aria-level is not exposed on non-heading roles
https://bugs.webkit.org/show_bug.cgi?id=177775
Summary
AX: [ATK] The value of aria-level is not exposed on non-heading roles
Joanmarie Diggs
Reported
2017-10-02 13:49:06 PDT
The value of aria-level is not exposed on non-heading roles. It should be exposed via an AtkObject attribute, as is currently done for headings.
Attachments
Patch
(6.05 KB, patch)
2017-10-02 13:56 PDT
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-10-02 13:49:18 PDT
<
rdar://problem/34775360
>
Joanmarie Diggs
Comment 2
2017-10-02 13:56:47 PDT
Created
attachment 322432
[details]
Patch
WebKit Commit Bot
Comment 3
2017-10-02 18:02:51 PDT
Comment on
attachment 322432
[details]
Patch Clearing flags on attachment: 322432 Committed
r222765
: <
http://trac.webkit.org/changeset/222765
>
WebKit Commit Bot
Comment 4
2017-10-02 18:02:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug