AX: [ATK] The value of aria-level is not exposed on non-heading roles https://bugs.webkit.org/show_bug.cgi?id=177775

Reviewed by Chris Fleizach.

Source/WebCore:

Expose the value of aria-level via the "level" AtkObject attribute, as is currently
done for headings.

Test: accessibility/gtk/aria-level.html

* accessibility/atk/WebKitAccessibleWrapperAtk.cpp:
(webkitAccessibleGetAttributes):

Tools:

* WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:
(WTR::AccessibilityUIElement::hierarchicalLevel const):

LayoutTests:

* accessibility/gtk/aria-level-expected.txt: Added.
* accessibility/gtk/aria-level.html: Added.


Canonical link: https://commits.webkit.org/194046@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222765 268f45cc-cd09-0410-ab3c-d52691b4dbfc